# mcp-arr

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/mcp_arr/: __init__.py  __main__.py  client.py  config.py  server.py
src/mcp_arr/tools/: __init__.py
src/mcp_arr/tools/radarr/: __init__.py  alternatenames.py  collections.py  credits.py  exclusions.py  genres.py  history.py  movie_files.py  movies.py  releases.py  wanted.py
src/mcp_arr/tools/shared/: __init__.py  blocklist.py  calendar.py  commands.py  config.py  delayprofiles.py  download_clients.py  health.py  history.py  importlists.py  indexers.py  manualimport.py  metadata.py  notifications.py  parse.py  profiles.py  queue.py  releases.py  rootfolders.py  system.py  tags.py
src/mcp_arr/tools/sonarr/: __init__.py  episodes.py  history.py  language.py  releaseprofiles.py  releases.py  season_audit.py  series.py  wanted.py
