[project]
name = "mcp-arr"
version = "0.1.0"
description = "MCP server for Sonarr and Radarr arr stack management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "elabx-org"}
]
keywords = ["mcp", "sonarr", "radarr", "arr", "media", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-arr = "mcp_arr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_arr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
